<resources>
    <string name="app_name">Navigation Helper</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="action_debug">Print Debug</string>
    <string name="action_close">Close Activity</string>
    <string name="action_back">Can go back?</string>
    <string name="action_new_activity">New Activity</string>
    <string name="action_add_fragment">Add Fragment</string>
    <string name="action_go_to">Go to fragment 4</string>
    <string name="action_go_to_home">Go to fragment home</string>
</resources>
