<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.fingerlinks.mobile.android.navigationhelper.sample.SecondActivity">
    <item
        android:id="@+id/action_add_fragment"
        android:orderInCategory="100"
        android:title="@string/action_add_fragment"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_go_to"
        android:orderInCategory="101"
        android:title="@string/action_go_to"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_to_home"
        android:orderInCategory="102"
        android:title="@string/action_go_to_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug"
        android:orderInCategory="103"
        android:title="@string/action_debug"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_back"
        android:orderInCategory="104"
        android:title="@string/action_back"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="105"
        android:title="@string/action_close"
        app:showAsAction="never" />
</menu>
